Fix alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
 h1 {
 	font-family: 'Roboto', sans-serif;
 	font-weight: 700;
+	text-align: center;
 }
 
 h3 {
@@ -18,7 +19,7 @@ h3 {
 }
 
 p {
-	font-family: 'Roboto', sans-serif;
+	
 	font-weight: 100;
 }
 
@@ -27,7 +28,8 @@ p {
 }
 
 .text-thirds {
-	padding-right: 20px
+	padding-left: 20px;
+	padding-right: 20px;
 }
 .symbol_map {
   /* top: 100px;
